# docflow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bootstrap.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: documents.md  index.md  runs.md  settings.md
docs/architecture/: backend.md  extending.md  frontend.md  index.md  pipeline.md
docs/guide/: configuration.md  dashboard.md  documents.md  email.md  flow.md  index.md  installation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  SourceBadge.tsx  StatusBadge.tsx  StorageBadge.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Docs.tsx  Documents.tsx  RunDetail.tsx  Settings.tsx
scripts/: build_frontend.sh  run_once.py  smoketest.py
skills/docs-sync/: SKILL.md
skills/e2e-health/: SKILL.md
skills/release/: SKILL.md
skills/security-audit/: SKILL.md
src/docflow/: __init__.py  __main__.py  config.py  db.py  email_source.py  ocr.py  photos.py  pipeline.py  scheduler.py
src/docflow/llm/: __init__.py  anthropic.py  base.py  ollama.py  openrouter.py
src/docflow/storage/: __init__.py  base.py  generic_cloud.py  icloud.py  local.py
src/docflow/web/: __init__.py  app.py  routes.py
src/docflow/web/templates/: base.html  documents.html  index.html  run_detail.html  settings.html
tests/: conftest.py  test_db.py  test_llm.py  test_ocr.py  test_pipeline.py  test_web.py
tests/e2e/: conftest.py  test_e2e_email.py  test_e2e_photos.py  test_e2e_scheduler.py  test_e2e_search.py  test_e2e_settings.py  test_e2e_storage.py  test_e2e_web.py
